# DivEye

./: README.md
DivEyeClient/: .gitignore  CMakeLists.txt  diveye.conf  main.cpp
DivEyeClient/include/: Analyze.h  FrqEye.h  conf.h  initial.h
DivEyeClient/src/: Analyze.cpp  Deliver.cpp  RecordTool.cpp  Tables.cpp  initial.cpp  test.cpp
DivEyeServer/: CMakeLists.txt  run.sh
DivEyeServer/include/: DBUtil.h  Deliver.h  RecordTool.h  Tables.h  httpd.h  test.h
DivEyeServer/lib/libpq/include/: pg_config.h
DivEyeServer/lib/libpq/lib/: libecpg_compat.so.3  libpgtypes.so.3.15
DivEyeServer/lib/libpq/lib/pkgconfig/: libecpg.pc  libecpg_compat.pc  libpgtypes.pc  libpq.pc
DivEyeServer/lib/libpq/lib/postgresql/pgxs/src/: Makefile.global
DivEyeServer/lib/libpq/lib/postgresql/pgxs/src/test/isolation/: isolationtester  pg_isolation_regress
DivEyeServer/lib/libpq/lib/postgresql/pgxs/src/test/regress/: pg_regress
DivEyeServer/lib/pqxx/lib/: libpqxx.la
DivEyeServer/lib/pqxx/lib/pkgconfig/: libpqxx.pc
DivEyeServer/src/: DBUtil.cpp  FrqEye.cpp  httpd.cpp  test.cpp
DivEyeWeb/: manage.py  run.sh
DivEyeWeb/DivEyeWeb/: asgi.py  settings.py  urls.py  wsgi.py
DivEyeWeb/app/: models.py  views.py
DivEyeWeb/app/static/plugins/: console.sql
DivEyeWeb/app/templates/: colors.html  index.html  nodeStatus.html  userStatus.html
